src/test/deca/context/valid/operations/valid_operations_mod.deca
// Description:
//      test valid for modulo operation.
//      Test part of rule 3.33
//
// Resultats:
//    0
//    3
//
// Historique:
//    cree le 02/01/2025

{
   // MOD
   println(6%2);
   println(3%5);
}