src/test/deca/context/invalid/operations/modulo/invalid_op_mod_string_string.deca
// Description:
//    test invalid MOD between string and string
//
// [Begin Result]
//invalid_op_mod_string_string.deca:12:15: Unsupported operation '%' between types string and string. Operation '%' supported only between integers. (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print("12" % "abc");
}